@@ -4,6 +4,7 @@ import com.girigiri.kwrental.auth.domain.Member;
 import com.girigiri.kwrental.auth.repository.MemberRepository;
 import com.girigiri.kwrental.equipment.domain.Equipment;
 import com.girigiri.kwrental.equipment.repository.EquipmentRepository;
+import com.girigiri.kwrental.inventory.domain.RentalDateTime;
 import com.girigiri.kwrental.inventory.domain.RentalPeriod;
 import com.girigiri.kwrental.item.domain.Item;
 import com.girigiri.kwrental.item.repository.ItemRepository;
@@ -17,6 +18,8 @@ import com.girigiri.kwrental.rental.dto.response.RentalSpecByItemResponse;
 import com.girigiri.kwrental.rental.dto.response.RentalSpecsByItemResponse;
 import com.girigiri.kwrental.rental.dto.response.RentalsDto;
 import com.girigiri.kwrental.rental.dto.response.ReservationsWithRentalSpecsByEndDateResponse;
+import com.girigiri.kwrental.rental.dto.response.overduereservations.OverdueReservationResponse;
+import com.girigiri.kwrental.rental.dto.response.reservationsWithRentalSpecs.ReservationWithRentalSpecsResponse;
 import com.girigiri.kwrental.rental.dto.response.reservationsWithRentalSpecs.ReservationsWithRentalSpecsAndMemberNumberResponse;
 import com.girigiri.kwrental.rental.repository.RentalSpecRepository;
 import com.girigiri.kwrental.rental.repository.dto.RentalDto;
@@ -24,6 +27,7 @@ import com.girigiri.kwrental.rental.repository.dto.RentalSpecDto;
 import com.girigiri.kwrental.reservation.domain.Reservation;
 import com.girigiri.kwrental.reservation.domain.ReservationSpec;
 import com.girigiri.kwrental.reservation.repository.ReservationRepository;
+import com.girigiri.kwrental.reservation.repository.dto.ReservationWithMemberNumber;
 import com.girigiri.kwrental.testsupport.fixture.*;
 import io.restassured.RestAssured;
 import io.restassured.http.ContentType;
@@ -34,12 +38,13 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
 
 import java.time.LocalDate;
-import java.time.LocalDateTime;
+import java.util.Collections;
 import java.util.List;
 import java.util.Set;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.hamcrest.Matchers.containsString;
+import static org.junit.jupiter.api.Assertions.assertAll;
 import static org.springframework.restdocs.restassured.RestAssuredRestDocumentation.document;
 
 class RentalAcceptanceTest extends AcceptanceTest {
@@ -97,7 +102,7 @@ class RentalAcceptanceTest extends AcceptanceTest {
 
         final ReservationSpec reservationSpec1 = ReservationSpecFixture.builder(equipment1).period(new RentalPeriod(LocalDate.now(), LocalDate.now().plusDays(1))).build();
         final ReservationSpec reservationSpec2 = ReservationSpecFixture.builder(equipment2).period(new RentalPeriod(LocalDate.now(), LocalDate.now().plusDays(1))).build();
-        final LocalDateTime acceptDateTime = LocalDateTime.now();
+        final RentalDateTime acceptDateTime = RentalDateTime.now();
         final Reservation reservation1 = reservationRepository.save(ReservationFixture.builder(List.of(reservationSpec1, reservationSpec2)).memberId(member.getId()).acceptDateTime(acceptDateTime).build());
         final RentalSpec rentalSpec1 = RentalSpecFixture.builder().propertyNumber("11111111").reservationSpecId(reservationSpec1.getId()).build();
         final RentalSpec rentalSpec2 = RentalSpecFixture.builder().propertyNumber("33333333").reservationSpecId(reservationSpec2.getId()).build();
@@ -119,10 +124,10 @@ class RentalAcceptanceTest extends AcceptanceTest {
                 .then().log().all().statusCode(HttpStatus.OK.value())
                 .extract().as(ReservationsWithRentalSpecsAndMemberNumberResponse.class);
 
-        // then todo: 로컬에서는 통과하는 테스트가 CI에서 작동하지 않는다. 이 문제를 해결해야 함.
-//        assertThat(response.getReservations()).usingRecursiveFieldByFieldElementComparator()
-//                .containsExactlyInAnyOrder(ReservationWithRentalSpecsResponse.of(reservation1, List.of(rentalSpec1, rentalSpec2)),
-//                        ReservationWithRentalSpecsResponse.of(reservation2, Collections.emptyList()));
+        // then
+        assertThat(response.getReservations()).usingRecursiveFieldByFieldElementComparator()
+                .containsExactlyInAnyOrder(ReservationWithRentalSpecsResponse.of(new ReservationWithMemberNumber(reservation1, member.getMemberNumber()), List.of(rentalSpec1, rentalSpec2)),
+                        ReservationWithRentalSpecsResponse.of(new ReservationWithMemberNumber(reservation2, member.getMemberNumber()), Collections.emptyList()));
     }
 
     @Test
@@ -133,7 +138,7 @@ class RentalAcceptanceTest extends AcceptanceTest {
         final Equipment equipment2 = equipmentRepository.save(EquipmentFixture.builder().modelName("test2").build());
         final Member member = memberRepository.save(MemberFixture.create());
 
-        final LocalDateTime acceptDateTime = LocalDateTime.now();
+        final RentalDateTime acceptDateTime = RentalDateTime.now();
         final LocalDate now = LocalDate.now();
         final LocalDate yesterday = now.minusDays(1);
 
@@ -148,7 +153,7 @@ class RentalAcceptanceTest extends AcceptanceTest {
         final ReservationSpec reservationSpec4 = ReservationSpecFixture.builder(equipment2).period(new RentalPeriod(yesterday.minusDays(1), yesterday)).build();
         final Reservation reservation2 = reservationRepository.save(ReservationFixture.builder(List.of(reservationSpec3, reservationSpec4)).memberId(member.getId()).acceptDateTime(acceptDateTime).build());
         final RentalSpec rentalSpec3 = RentalSpecFixture.builder().propertyNumber("33333333").reservationSpecId(reservationSpec3.getId()).build();
-        final RentalSpec rentalSpec4 = RentalSpecFixture.builder().propertyNumber("44444444").reservationSpecId(reservationSpec4.getId()).returnDateTime(LocalDateTime.now()).build();
+        final RentalSpec rentalSpec4 = RentalSpecFixture.builder().propertyNumber("44444444").reservationSpecId(reservationSpec4.getId()).returnDateTime(RentalDateTime.now()).build();
         rentalSpecRepository.saveAll(List.of(rentalSpec3, rentalSpec4));
 
         // when
@@ -158,13 +163,13 @@ class RentalAcceptanceTest extends AcceptanceTest {
                 .then().log().all().statusCode(HttpStatus.OK.value())
                 .extract().as(ReservationsWithRentalSpecsByEndDateResponse.class);
 
-        // then todo: 로컬에서는 통과하는 테스트가 CI에서 작동하지 않는다. 이 문제를 해결해야 함.
-//        assertAll(
-//                () -> assertThat(response.getOverdueReservations().getReservations()).usingRecursiveFieldByFieldElementComparator()
-//                        .containsExactlyInAnyOrder(OverdueReservationResponse.of(reservation2, List.of(rentalSpec3))),
-//                () -> assertThat(response.getReservationsByEndDate().getReservations()).usingRecursiveFieldByFieldElementComparator()
-//                        .containsExactlyInAnyOrder(ReservationWithRentalSpecsResponse.of(reservation1, List.of(rentalSpec1, rentalSpec2)))
-//        );
+        // then
+        assertAll(
+                () -> assertThat(response.getOverdueReservations().getReservations()).usingRecursiveFieldByFieldElementComparator()
+                        .containsExactlyInAnyOrder(OverdueReservationResponse.of(new ReservationWithMemberNumber(reservation2, member.getMemberNumber()), List.of(rentalSpec3))),
+                () -> assertThat(response.getReservationsByEndDate().getReservations()).usingRecursiveFieldByFieldElementComparator()
+                        .containsExactlyInAnyOrder(ReservationWithRentalSpecsResponse.of(new ReservationWithMemberNumber(reservation1, member.getMemberNumber()), List.of(rentalSpec1, rentalSpec2)))
+        );
     }
 
     @Test
@@ -174,7 +179,7 @@ class RentalAcceptanceTest extends AcceptanceTest {
         final Equipment equipment1 = equipmentRepository.save(EquipmentFixture.builder().modelName("test1").build());
         final Equipment equipment2 = equipmentRepository.save(EquipmentFixture.builder().modelName("test2").build());
 
-        final LocalDateTime acceptDateTime = LocalDateTime.now();
+        final RentalDateTime acceptDateTime = RentalDateTime.now();
         final LocalDate now = LocalDate.now();
         final LocalDate yesterday = now.minusDays(1);
 
@@ -251,12 +256,12 @@ class RentalAcceptanceTest extends AcceptanceTest {
 
         final ReservationSpec reservationSpec1 = ReservationSpecFixture.create(equipment);
         final Reservation reservation1 = reservationRepository.save(ReservationFixture.builder(List.of(reservationSpec1)).terminated(true).build());
-        final LocalDateTime now = LocalDateTime.now();
-        final RentalSpec rentalSpec1 = RentalSpecFixture.builder().reservationId(reservation1.getId()).propertyNumber("11111111").acceptDateTime(now).returnDateTime(now.plusDays(1)).status(RentalSpecStatus.RETURNED).build();
+        final RentalDateTime now = RentalDateTime.now();
+        final RentalSpec rentalSpec1 = RentalSpecFixture.builder().reservationId(reservation1.getId()).propertyNumber("11111111").acceptDateTime(now).returnDateTime(now.calculateDay(1)).status(RentalSpecStatus.RETURNED).build();
 
         final ReservationSpec reservationSpec2 = ReservationSpecFixture.create(equipment);
         final Reservation reservation2 = reservationRepository.save(ReservationFixture.builder(List.of(reservationSpec2)).terminated(true).build());
-        final RentalSpec rentalSpec2 = RentalSpecFixture.builder().reservationId(reservation1.getId()).propertyNumber("11111111").acceptDateTime(now.plusDays(2)).returnDateTime(now.plusDays(3)).status(RentalSpecStatus.LOST).build();
+        final RentalSpec rentalSpec2 = RentalSpecFixture.builder().reservationId(reservation1.getId()).propertyNumber("11111111").acceptDateTime(now.calculateDay(2)).returnDateTime(now.calculateDay(3)).status(RentalSpecStatus.LOST).build();
 
         rentalSpecRepository.saveAll(List.of(rentalSpec1, rentalSpec2));
 
